# Horse

./: main.py  pyproject.toml
data_preprocessing/: RC_ActiveDuty.md  RC_ActiveDuty_Drop.md  cleaned_data_1.md  merged_data.md  merged_data_kr.csv  merged_data_kr_Nan copy.csv  merged_data_kr_Nan.csv
data_raw/: 1.json  horse_info.csv  horse_info.md  raw_race_2023.csv  raw_race_2025.csv  raw_race_20260426.csv  현역경주마_20260426.csv
data_raw/backup/: raw_race_2024.csv
src/common/utils/: process_json_files.py  raw_horseinfo_json_to_csv.py  raw_race_json_to_csv.py
src/hw/: 1 copy 2.ipynb  1 copy.ipynb  1.ipynb  advanced_overfitting_curve.csv  load_saved_models.py  rank_model_advanced_feature_importance.csv  rank_model_advanced_results.json  rank_model_advanced_test_predictions.csv  rank_model_compare_2026_holdout.ipynb  rank_model_history_feature_importance.csv  rank_model_history_features.ipynb  rank_model_history_results.json  rank_model_history_summary.md  rank_model_lightgbm.joblib  rank_model_results.json  split_comparison_reference.json  split_comparison_summary.md  train_rank_model.py  train_rank_model_advanced.py  train_rank_model_history.py  ㅇㄹㅇㄹㄴㄹㄴㅇ.ipynb  혹시몰라만들어논Rank모델.ipynb
src/hw/VHA/: app.py  model.pkl
src/hw/project/: ml.ipynb
src/hw/망한폴더/: 1 copy 2.ipynb  1 copy.ipynb  1.ipynb  2.ipynb  (+18 more)
src/jm/: 1.ipynb  1_RC_ActiveDuty_Drop.ipynb  2_1.ipynb  4_data_merge.ipynb  5_data.ipynb  7_asasda.ipynb  8_R_model.ipynb  RC_ActiveDuty_Drop.csv  RC_ActiveDuty_Drop.ipynb  data_drop.ipynb  horse_race_2021.csv
src/jw/: 1.ipynb  fetch_api_to_csv.py  prepro_1.ipynb
(+6 files in other folders)
