[project]
name = "horse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [    
    "beautifulsoup4>=4.14.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "kiwipiepy>=0.23.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",]
